--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ query-string==2019.4.13
 request==2019.4.13
 requests==2.21.0
 selenium==3.141.0
-tika==1.19
 urllib3==1.24.1
 Werkzeug==0.15.5
+pymupdf==1.16.0
