--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pythondialog==3.4.0
 query-string==2019.4.13
 request==2019.4.13
 requests==2.21.0
-selenium==3.141.0
 urllib3==1.24.1
 Werkzeug==0.15.5
 pymupdf==1.16.0
+lxml==4.4.1
